Need to implement the prompt send button click code

--- a/canvasapp/Src/App.fx.yaml
+++ b/canvasapp/Src/App.fx.yaml
@@ -1,7 +1,14 @@
 App As appinfo:
     BackEnabled: =false
     OnStart: |
-        =Set(
+        =ClearCollect(
+            colTabs,
+            {
+                Name: "Chat",
+                Screen: Chat
+            }
+        );
+        Set(
             varTablistDefault,
             ["Chat"]
         );
