Base version after the UI reorg. Need to build on this.

--- a/canvasapp/Src/App.fx.yaml
+++ b/canvasapp/Src/App.fx.yaml
@@ -1,6 +1,6 @@
 App As appinfo:
     BackEnabled: =false
-    OnStart: |
+    OnStart: |-
         =ClearCollect(
             colTabs,
             {
@@ -43,6 +43,7 @@ App As appinfo:
         );
         // Clear
         TextInputPrompt.Clear;
+        Progress1.Visible = false;
 
     Host As hostControl.DefaultHostControlVariant:
         OnCancel: =false
