--- a/canvasapp/Src/Chat.fx.yaml
+++ b/canvasapp/Src/Chat.fx.yaml
@@ -89,7 +89,18 @@
                         BorderColor: =RGBA(89, 0, 0, 1)
                         Default: =Last(mgpt_reponses)
                         DelayItemLoading: =true
-                        Items: =Filter('mgpt_reponses', 'Created On' >= DateAdd(Now(), -1, TimeUnit.Hours))
+                        Items: |-
+                            =If(
+                                IsBlankOrError(clearTime),
+                                Filter(
+                                    mgpt_reponses,
+                                    'Created On' >= Today()
+                                ),
+                                Filter(
+                                    mgpt_reponses,
+                                    'Created On' >= clearTime
+                                )
+                            )
                         Layout: =Layout.Vertical
                         LayoutMinHeight: =287
                         LayoutMinWidth: =320
@@ -329,7 +340,7 @@
                     OnSelect: |-
                         =Reset(TextInputPrompt);
                         Set(clearTime, Now());
-                        Filter('mgpt_reponses', 'Created On' >= clearTime)
+                        Filter(mgpt_reponses, 'Created On' >= clearTime)
                     Text: ="Clear"
                     Width: =96
                     X: =0
