--- a/canvasapp/Src/Chat.fx.yaml
+++ b/canvasapp/Src/Chat.fx.yaml
@@ -205,7 +205,7 @@
                     PaddingLeft: =0
                     PaddingRight: =0
                     PaddingTop: =0
-                    Text: =ThisItem.User
+                    Text: =ThisItem.Prompt
                     VerticalAlign: =VerticalAlign.Top
                     Width: =Parent.TemplateWidth - 100
                     X: =65
